2004-01-20  JP Rosevear <jpr@ximian.com>

	* Makefile.am: don't build dead files

	* e-xml-hash-utils.[hc]: kill, these were moved to e-d-s long ago

2004-01-14  Jeffrey Stedfast  <fejj@ximian.com>

	* e-bconf-map.[c,h]: New source files for mapping bonobo-conf keys
	to gconf keys. Moved out of shell/e-config-upgrade.c

2004-01-13  Not Zed  <NotZed@Ximian.com>

	* e-msgport.c (em_cache*): A time-based thread-safe in-memory
	cache thing.  Called em_cache 'cause there's an e_cache in gal.

2004-01-05  Not Zed  <NotZed@Ximian.com>

	* e-memory.c (e_mempool_destroy): Fix from Zan Lynx
	<zlynx@acm.org> to lock the memchunk before freeing the pool
	header.

2003-12-06  JP Rosevear <jpr@ximian.com>

	* Makefile.am: Remove hard coded disable deprecated flags

2003-11-23  JP Rosevear  <jpr@ximian.com>

	* Makefile.am (INCLUDES): remove gtk deprecated flag

2003-11-18  JP Rosevear <jpr@ximian.com>

	* Makefile.am: remove db3 library, if you really want it, get it
	from e-d-s

2003-11-14  JP Rosevear <jpr@ximian.com>

	* Makefile.am: don't build the e-source stuff anymore, its in
	e-d-s now

2003-11-14  JP Rosevear <jpr@ximian.com>

	* test-source-list.c (on_idle_do_stuff): we only need the uid to
	remove and peek at stuff

	* e-source-list.h: update proto types

	* e-source-list.c (e_source_list_peek_source_by_uid): allow peek
	by uid only
	(e_source_list_remove_source_by_uid): allow removal by uid only

2003-11-07  Dan Winship  <danw@ximian.com>

	* ename/*: Removed. No longer used by evolution except via
	evolution-data-server.
	
	* Makefile.am (SUBDIRS): Remove ename

2003-11-07  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: remove build sources from dist

2003-11-07  JP Rosevear <jpr@ximian.com>

	* Makefile.am: make sure the marshal header and source are in the
	source list

2003-10-31  Hans Petter Jansson  <hpj@ximian.com>

	* e-source.c (e_source_get_uri): Don't compress trailing slashes in
	URI elements.

2003-10-31  Not Zed  <NotZed@Ximian.com>
